fix constraints
